* Added z index to heaer to prevent overlapping.

--- a/src/Components/Header/Header.less
+++ b/src/Components/Header/Header.less
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 30;
 }
 .leftSection{
   font-weight: 700;
